# move_pkg

./: CMakeLists.txt  package.xml
launch/: moveit.rviz  moveit_rviz.launch  xsarm_moveit.launch  xsarm_moveit_interface.launch
msg/: EE_Pose.msg
scripts/: moveit_python_interface  plot.py  plot_pose.py
